--- a/infra/docker/mysql/Dockerfile
+++ b/infra/docker/mysql/Dockerfile
@@ -4,3 +4,7 @@ LABEL maintainer="ucan-lab <yes@u-can.pro>"
 ENV TZ=UTC
 
 COPY ./infra/docker/mysql/my.cnf /etc/my.cnf
+
+COPY ./infra/docker/mysql/DB/test.sql /docker-entrypoint-initdb.d/test.sql
+
+CMD ["mysqld"]
