--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:UYs4p4g41smSN+HPeB40r6uKK6D8fmDvSdSPrnWA560=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -17,7 +17,7 @@ DB_PASSWORD=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
 
 REDIS_HOST=127.0.0.1
