--- a/.github/workflows/laravel-create-project.yml
+++ b/.github/workflows/laravel-create-project.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Composer Version
         run: docker-compose exec -T app composer --version
 
-      - name: Create Laravel Project
-        run: docker-compose exec -T app composer create-project --prefer-dist laravel/laravel .
+      # - name: Create Laravel Project
+      #   run: docker-compose exec -T app composer create-project --prefer-dist laravel/laravel .
 
       - name: Laravel Version
         run: docker-compose exec -T app php artisan --version
