--- a/.github/workflows/laravel-create-project.yml
+++ b/.github/workflows/laravel-create-project.yml
@@ -26,6 +26,8 @@ jobs:
 
       # - name: Create Laravel Project
       #   run: docker-compose exec -T app composer create-project --prefer-dist laravel/laravel .
+      - name: Composer Install
+        run: docker-compose exec -T app composer install
 
       - name: Laravel Version
         run: docker-compose exec -T app php artisan --version
