--- a/.github/workflows/laravel-create-project.yml
+++ b/.github/workflows/laravel-create-project.yml
@@ -32,6 +32,11 @@ jobs:
       - name: Laravel Version
         run: docker-compose exec -T app php artisan --version
 
+      - name: Laravel Settings
+        run: |
+          docker-compose exec -T app cp .env.example .env
+          docker-compose exec -T app php artisan key:generate
+    
       - name: Laravel Migrate Testing
         run: docker-compose exec -T app php artisan migrate --force
 
