--- a/.github/workflows/laravel-create-project.yml
+++ b/.github/workflows/laravel-create-project.yml
@@ -24,10 +24,8 @@ jobs:
       - name: Composer Version
         run: docker-compose exec -T app composer --version
 
-      # - name: Create Laravel Project
-      #   run: docker-compose exec -T app composer create-project --prefer-dist laravel/laravel .
-      - name: Composer Install
-        run: docker-compose exec -T app composer install
+      - name: Create Laravel Project
+        run: docker-compose exec -T app composer create-project --prefer-dist laravel/laravel .
 
       - name: Laravel Version
         run: docker-compose exec -T app php artisan --version
@@ -36,7 +34,7 @@ jobs:
         run: |
           docker-compose exec -T app cp .env.example .env
           docker-compose exec -T app php artisan key:generate
-    
+
       - name: Laravel Migrate Testing
         run: docker-compose exec -T app php artisan migrate --force
 
