--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=120.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=test
 DB_USERNAME=phper
 DB_PASSWORD=secret
 
