--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,7 +12,7 @@ DB_HOST=120.0.0.1
 DB_PORT=3306
 DB_DATABASE=test
 DB_USERNAME=phper
-DB_PASSWORD=secret
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
