--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:UYs4p4g41smSN+HPeB40r6uKK6D8fmDvSdSPrnWA560=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,10 +8,10 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=120.0.0.1
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=test
-DB_USERNAME=phper
+DB_DATABASE=laravel
+DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
