--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:UYs4p4g41smSN+HPeB40r6uKK6D8fmDvSdSPrnWA560=
 APP_DEBUG=true
 APP_URL=http://localhost
 
